# makefile-parser-python

./: .gitignore  CHANGELOGS.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/mkparse/: mkparse.py
tests/: unittest.py
tests/resources/Makefiles/: test.Makefile
