[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name='mkparse'
version='0.5.0'
description="A simple Makefile Parser written in Python that is designed to simplify the process of importing Makefile contents into python as dictionary (key-value mappings (i.e. hashmap/associative arrays)) objects"
authors = [
    { name="Thanatisia", email="55834101+Thanatisia@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 3 - Alpha',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',

    # Pick your license as you wish
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here.
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
# install_requires=[
#    # List your dependencies here
# ]

[project.urls]
Homepage = "https://github.com/Thanatisia/makefile-parser-python"
Repository = "https://github.com/Thanatisia/makefile-parser-python.git"

[tools.setuptools.packages.find]
where = ["src"]



